# hello_world_rust

./: .env  Cargo.toml  README.md  benchmark.sh  create_dummy.sh  test.sh
migrations/: init.sql
src/: config.rs  main.rs
src/models/: user.rs
src/repositories/: user_repo.rs
src/routes/: user.rs
